# spielhuus

./: .gitignore  .gitmodules  Cargo.toml  Makefile  README.md  eslint.config.js  eslintrc.js  hugo.toml  package.json  tsconfig.json
.github/workflows/: deploy.yml  eslint.yml  rust-clippy.yml
.nvim/lungan/: spell.md
assets/sass/: _forms.scss  _themes.scss  main.scss
content/2d_raycasting/: index.md
content/6502/: index.md
content/ahoi_wgpu/: index.md
content/ca/: index.md
content/cube/: index.md
content/fertilization/: index.md
content/game_of_life/: index.md
content/lcs/: index.md
content/mandelbrot/: index.md
content/maze/: index.html  index.md
content/monkey/: index.md
content/myers/: index.md
content/nikolaus/: index.md
content/noise/: index.md
content/palette/: index.md
content/raycasting/: index.md
content/raytracing/: index.md
content/voronoi/: index.md
content/worm/: index.md
data/: links.yaml
layouts/: baseof.html  home.html  page.html  term.html
layouts/_partials/: footer.html  head.html  header.html  terms.html
layouts/_shortcodes/: link.html  script.html  svg.html  wasm.html  wikipedia.html
src/2d_raycasting/: Cargo.toml
src/2d_raycasting/js/: canvas2.ts  dds.ts  main.ts  perlin_noise.ts  utils.ts
src/2d_raycasting/src/: lib.rs
src/ahoi_wgpu/: Cargo.toml
src/ahoi_wgpu/js/: main.ts
src/ahoi_wgpu/src/: lib.rs  main.rs
src/ca/: Cargo.toml
src/ca/js/: main.ts
src/ca/src/: lib.rs  shader.wgsl
src/cube/: Cargo.toml
src/cube/src/: cube.rs  lib.rs  vertex_buf_shader.wgsl
src/fertilization/: Cargo.toml
src/fertilization/js/: main.ts
src/fertilization/src/: lib.rs  main.rs  shader.wgsl
src/game_of_life/: Cargo.toml
src/game_of_life/js/: main.ts
src/game_of_life/src/: lib.rs  shader.wgsl
src/genetic/: Cargo.toml
src/genetic/src/: lib.rs
src/gpu_lines/: Cargo.toml
src/gpu_lines/src/: lib.rs
src/js/: color.ts  math.ts  monaco_integration.ts  noise.ts  vector.ts
src/lcs/js/: main.ts
src/mandelbrot/: Cargo.toml
src/mandelbrot/src/: main.rs
src/maze/: Cargo.toml
src/maze/js/: main.ts
src/maze/src/: README.md  color.rs  egui_utils.rs  grid_shader.wgsl  lib.rs  main.rs  mod.rs  path.rs  shader.wgsl
src/maze/src/generator/: aldous_broder.rs  backtracking.rs  binary_tree.rs  eller.rs  growing_tree.rs  hunt_and_kill.rs  kruskal.rs  mod.rs  prim.rs  recursive_division.rs  sidewinder.rs  wilson.rs
src/maze/src/solver/: a_star.rs  backtracker.rs  dead_end_filing.rs  djikstra.rs  genetic.rs  mod.rs  path.rs  wall_follower.rs
src/monkey/: Cargo.toml
src/monkey/js/: main.ts
src/monkey/src/: lib.rs
src/myers/js/: main.ts
src/nikolaus/js/: main.ts
src/noise/js/: 3dnoise.ts  basic.ts  main.ts  terrain.ts
src/palette/js/: main.ts
src/raycasting/js/: canvas1.ts  canvas2.ts  canvas3.ts  canvas4.ts  grid.ts  main.ts  maps.ts  player.ts  utils.ts
src/raycasting/src/: main.rs
src/raytracing/: Cargo.toml
src/raytracing/js/: camera.ts  canvas1.ts  hitable.ts  hitable_list.ts  interval.ts  main.ts  renderer.worker.ts  sphere.ts  utils.ts
src/raytracing/src/: main.rs
src/voronoi/: Cargo.toml
src/voronoi/js/: gpu_voronoi.ts  jfa_voronoi.ts  js_voronoi.ts  main.ts
src/voronoi/src/: color.rs  lib.rs  ray.rs  shader.wgsl
src/worm/: Cargo.toml
src/worm/src/: main.rs
src/worm2/: Cargo.toml
src/worm2/src/: shader.wgsl  simple_shader.wgsl
src/worm_shape/: Cargo.toml
src/worm_shape/src/: lib.rs
workspaces/ahoi_wgpu/: Cargo.toml
workspaces/ahoi_wgpu/src/: lib.rs  vertex_buf_shader.wgsl
workspaces/ca/: Cargo.toml  build.rs
workspaces/ca/src/: library.js  main.rs
workspaces/ca_gpu/: Cargo.toml
workspaces/ca_gpu/src/: lib.rs  main.rs  shader.wgsl
workspaces/cube/src/: lib.rs  main.rs
workspaces/fertilization/: Cargo.toml  build.rs
workspaces/fertilization/src/: main.rs
workspaces/game_of_life/: Cargo.toml  build.rs
workspaces/game_of_life/src/: lib.rs  main.rs  shader.wgsl
workspaces/genetic/: Cargo.toml
workspaces/gpu_lines/src/: main.rs  shader.wgsl
workspaces/mandelbrot/: build.rs
workspaces/maze/src/: main.rs
workspaces/maze/src/generator/: aldous_broder.rs  backtracking.rs  growing_tree.rs  hunt_and_kill.rs  kruskal.rs  prim.rs  sidewinder.rs
workspaces/maze/src/solver/: dead_end_filing.rs  genetic.rs  mod.rs
workspaces/monkey/: Cargo.toml  build.rs
workspaces/monkey/src/: lib.rs  library.js  main.rs
workspaces/nikolaus/: Cargo.toml  build.rs
workspaces/nikolaus/src/: library.js  main.rs  nikolaus.rs
workspaces/rubik/: Cargo.toml
workspaces/rubik/src/: lib.rs  main.rs
workspaces/voronoi/: Cargo.toml
workspaces/voronoi/src/: main.rs
workspaces/wasm/: Cargo.toml  build.rs
workspaces/wasm/src/: main.rs
workspaces/wasm_callback/: Cargo.toml  build.rs
workspaces/wasm_callback/src/: library.js  main.rs
workspaces/wasm_raylib/: Cargo.toml  build.rs
workspaces/wasm_raylib/src/: main.rs
workspaces/worm/: build.rs
workspaces/worm2/: Cargo.toml
workspaces/worm2/src/: main.rs
workspaces/worm_shape/: Cargo.toml
workspaces/worm_shape/src/: main.rs
www/: hugo.toml
www/content/posts/ahoi_webgpu/: index.md
www/content/posts/ca_rules/: index.md
www/content/posts/fertilization/: index.html
www/content/posts/game_of_life/: index.md
www/content/posts/maze/: index.html
www/content/posts/monkey/: index.md
www/content/posts/nikolaus/: index.md
www/content/posts/voronoi/: index.md
www/content/posts/wasm/: index.md
www/content/posts/wasm_callback/: index.md
www/content/posts/wasm_raylib/: index.md
www/content/posts/worm/: index.md
www/data/: links.yaml
www/public/: index.html  index.xml  monkey.js  monkey.wasm  sitemap.xml  wasm.wasm
www/public/js/: main.js.map
www/public/posts/: index.html  index.xml
www/public/posts/ca_rules/: index.html
www/public/posts/fertilization/: index.html
www/public/posts/maze/: index.html
www/public/tags/: index.html  index.xml
www/static/: fertilization.js  fertilization.wasm  nikolaus.js  nikolaus.wasm  wasm.js
www/themes/default/: theme.toml
(+22 files in other folders)
