[workspace]
resolver = "3"
members = [
  "src/genetic",
  "src/monkey",
  "src/ahoi_wgpu",
  "src/ca",
  "src/voronoi",
  "src/game_of_life",
  "src/fertilization",
  "src/mandelbrot",
  "src/worm_shape",
  "src/cube",
  "src/worm",
  "src/maze",
  "src/raytracing",
  "src/worm2",
  "src/gpu_lines",
  #"src/raycasting",
]

[profile.release]
lto = true

[workspace.dependencies]
raylib-egui-rs = { git = "https://github.com/spielhuus/raylib-egui-rs.git" }
anyhow = "1.0"
rand = "0.9"
winit = { version = "0.30", default-features = false, features = ["rwh_06", "wayland"]  }
log = "0.4"
wgpu = { version = "26.0.1", features = ["wgsl"] }
pollster = "0.4"
bytemuck = { version = "1.23", features = [ "derive" ] }
env_logger = "0.11"
