[workspace]
resolver = "3"
members = [
  "src/genetic",
  "src/monkey",
  "src/game_of_life",
  "src/fertilization",
  "src/mandelbrot",
  "src/cube",
  "src/maze",
  "src/raytracing",
]

[profile.release]
lto = true

[workspace.dependencies]
raylib-egui-rs = { git = "https://github.com/spielhuus/raylib-egui-rs.git" }
anyhow = "1.0"
rand = "0.9"
winit = { version = "0.30", default-features = false, features = ["rwh_06", "wayland"]  }
log = "0.4"
wgpu = { version = "27.0.1", features = ["wgsl"] }
pollster = "0.4"
bytemuck = { version = "1.24", features = [ "derive" ] }
env_logger = "0.11"
softbuffer = "0.4"
raw-window-handle = "0.6"

egui = { git = "https://github.com/emilk/egui.git", default-features = false, features = ["default_fonts"] }
egui-winit = { git = "https://github.com/emilk/egui.git", default-features = false }
egui-wgpu = { git = "https://github.com/emilk/egui.git", default-features = false, features = ["winit"] }

#TODO decide on one math library
mint= "0.5"
