[package]
name = "fertilization"
version = "0.1.0"
edition = "2024"
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
genetic = { path = "../genetic" }
anyhow = { workspace = true }
rand = { workspace = true } 
log.workspace = true
wgpu ={ workspace = true } 
winit = { workspace = true }
bytemuck.workspace = true
pollster ={ workspace = true } 

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
env_logger.workspace = true

# Wasm specific
[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.3", features = ["wasm_js"] }
console_error_panic_hook = "0.1.7"
console_log = "1.0"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = [
    "Document",
    "Window",
    "Element",
    "HtmlCanvasElement",
]}
