[package]
name = "game_of_life"
version = "0.1.0"
edition = "2024"
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
rand.workspace = true
anyhow.workspace = true
winit.workspace = true
log.workspace = true
wgpu.workspace = true
pollster.workspace = true
bytemuck = { workspace = true, features = [ "derive" ] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
env_logger.workspace = true

[target.'cfg(target_arch = "wasm32")'.dependencies]
js-sys = "0.3.67"
getrandom = { version = "0.3", features = ["wasm_js"] }
console_error_panic_hook = "0.1.7"
console_log = "1.0"
instant = { version = "0.1", features = ["wasm-bindgen"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4.50"
web-sys = { version = "0.3.77", features = [
    "console",
    "Document",
    "Window",
    "Element",
    "HtmlInputElement",
]}
