[package]
name = "gpu-lines"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "wgpu_tutor"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
winit = { version = "0.30" }
log = "0.4"
wgpu = "26.0.1"
pollster = "0.4"
bytemuck = { version = "1.23", features = [ "derive" ] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
env_logger = "0.11"

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.7"
console_log = "1.0"
wgpu = { version = "26.0.1", features = ["webgl"]}
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4.50"
web-sys = { version = "0.3.77", features = [
    "Performance",
    "Document",
    "Window",
    "Element",
]}
