[package]
name = "maze"
version = "0.1.0"
edition = "2024"
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
anyhow = "1.0"
winit.workspace = true
log.workspace = true
wgpu.workspace = true
pollster.workspace = true
bytemuck = { workspace = true, features = [ "derive" ] }
rand.workspace = true

genetic = { path = "../genetic" }
disjoint = "0.8"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
env_logger.workspace = true
mint.workspace = true

egui = { workspace = true, optional = true }
egui-winit = { workspace = true, optional = true }
egui-wgpu = { workspace = true, optional = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.3", features = ["wasm_js"] }
console_error_panic_hook = "0.1.7"
console_log = "1.0"
wgpu = { workspace = true, features = ["webgl"]}
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = [
    "Performance",
    "Document",
    "Window",
    "Node",
    "Element",
    "Event",
    "SubmitEvent",
    "HtmlElement",
    "HtmlFormElement",
    "HtmlOptionElement",
    "HtmlButtonElement",
    "HtmlInputElement",
    "HtmlSelectElement",
]}

[features]
default = []
egui = [
    "dep:egui",
    "dep:egui-winit",
    "dep:egui-wgpu"
]
