[package]
name = "monkey"
version = "0.1.0"
edition = "2024"
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
log = "0.4"
genetic = { path = "../genetic" }
rand = { workspace = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.3", features = ["wasm_js"] }
console_error_panic_hook = "0.1.7"
console_log = { version = "1.0", features = ["color"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3.77", features = ['Document', 'Element', 'HtmlElement', 'Node', 'Window', 'MouseEvent', 'EventTarget', 'HtmlInputElement']}
gloo-timers = { version = "0.3", features = ["futures"] }
