[package]
name = "worm-shape"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "worm2"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
winit = { version = "0.30" }
log = "0.4"
wgpu = "26.0.1"
pollster = "0.4"
bytemuck = { version = "1.23", features = [ "derive" ] }
instant = "0.1"
# lyon = "1.0"
nalgebra = "0.34"
rand.workspace = true

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
env_logger = "0.11"

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.7"
console_log = "1.0"
wgpu = { version = "26.0.1", features = ["webgl"]}
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4.50"
web-sys = { version = "0.3.77", features = [
    "Performance",
    "Document",
    "Window",
    "Element",
]}
