[package]
name = "genetic"
version = "0.1.0"
edition = "2024"

[dependencies]
# raylib-egui-rs = { path = "../../../raylib-egui-rs", features = ["raygui"] }
disjoint = "0.8"
rand = "0.9"
# egui = { version = "0.32.0" }
# egui_extras = { version = "0.32.0", features = ["default", "image"] }
# env_logger = "0.11.8"
